--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -131,10 +131,6 @@
     "defaultMessage": "Process",
     "description": "Process photo filter name"
   },
-  "BJRz8L": {
-    "defaultMessage": "Tap to close",
-    "description": "BottomSheet - close button"
-  },
   "BRodym": {
     "defaultMessage": "Terms of Service",
     "description": "Signup Screen - Terms of Service label for hyperlink"
@@ -190,6 +186,10 @@
   "FnmYrQ": {
     "defaultMessage": "Merge",
     "description": "Label of the merge switch in cover edition"
+  },
+  "GQ5mTZ": {
+    "defaultMessage": "RGB",
+    "description": "ColorPicker Component - TextInput Label : RGB Title"
   },
   "GY7j0U": {
     "defaultMessage": "I agree to the",
@@ -283,6 +283,10 @@
     "defaultMessage": "Pick some topics you like.",
     "description": "OnBoarding About User Screen - SubTitle Pick some topics you like."
   },
+  "SjPeXD": {
+    "defaultMessage": "Hex",
+    "description": "HexColorTextInput Component Hex Title"
+  },
   "SmWLhs": {
     "defaultMessage": "Trending posts",
     "description": "SearchPage - Trending posts title"
@@ -323,6 +327,10 @@
     "defaultMessage": "Saturation",
     "description": "Saturation image edition parameters name"
   },
+  "VsI5yY": {
+    "defaultMessage": "Tap to validate and close",
+    "description": "BottomSheetModal accessibility label - Validate button"
+  },
   "WBD9Bx": {
     "defaultMessage": "Next",
     "description": "Button label of screens asking for camera/micro permissions"
@@ -334,6 +342,10 @@
   "X3tHsa": {
     "defaultMessage": "Tap to sign in",
     "description": "OnBoardingType User Type Screen - AccessibilityLabel Continue Button"
+  },
+  "X5oGqP": {
+    "defaultMessage": "Font color",
+    "description": "Title of the color picker modal in cover edition for font color"
   },
   "XfBKWm": {
     "defaultMessage": "Activity",
@@ -359,6 +371,10 @@
     "defaultMessage": "Enter your phone number or email address",
     "description": "SignIn Screen - Accessibility TextInput phone number or email address"
   },
+  "Zu7uzJ": {
+    "defaultMessage": "Save",
+    "description": "CoverTitleEditionPanel - Label of the save button in font color picker modal"
+  },
   "a17Y8A": {
     "defaultMessage": "Temperature",
     "description": "Temperature image edition parameters name"
@@ -370,6 +386,10 @@
   "aOpC4m": {
     "defaultMessage": "I agree to the",
     "description": "Signup Screen - 'I agree to the' Privacy Policy"
+  },
+  "b0rHlc": {
+    "defaultMessage": "Tap to cancel and close",
+    "description": "BottomSheetModal accessibility label - Close button"
   },
   "b4fFwm": {
     "defaultMessage": "Brightness",
@@ -459,6 +479,10 @@
     "defaultMessage": "Allow Azzapp to access your microphone",
     "description": "Camera authorization screen title for microphobe permission"
   },
+  "hcA1Cq": {
+    "defaultMessage": "Add",
+    "description": "FontPicker - BottomSheetModal - Validation button label"
+  },
   "hwL8A0": {
     "defaultMessage": "Follow",
     "description": "Follow button label in Profile Screen Button Bar"
@@ -482,6 +506,10 @@
   "ksoDJ1": {
     "defaultMessage": "Continue",
     "description": "OnBoarding Name Screen - AccessibilityLabel Button Continue"
+  },
+  "l8fBNE": {
+    "defaultMessage": "Edit Palette",
+    "description": "ColorPicker component button Edit Palette"
   },
   "l9gQB2": {
     "defaultMessage": "Continue",
@@ -575,6 +603,10 @@
     "defaultMessage": "You need to accept the Terms of Service and the Privacy Policy",
     "description": "Signup Screen - error message when the user did not accept the terms of service and the privacy policy"
   },
+  "qgSTeL": {
+    "defaultMessage": "Add a color",
+    "description": "ColorPicker component - Bottom sheet title Add a color"
+  },
   "qyCo80": {
     "defaultMessage": "Describe your publication",
     "description": "Post creation screen textarea placeholder"
@@ -667,6 +699,10 @@
     "defaultMessage": "Person",
     "description": "UserType: personal"
   },
+  "wVwWK7": {
+    "defaultMessage": "Cancel",
+    "description": "BottomSheetModal - default Cancel button label"
+  },
   "wfjPDR": {
     "defaultMessage": "Photos gallery",
     "description": "Accessibility label of the Photos gallery tabs in image picking wizzard"
@@ -678,6 +714,10 @@
   "wkQ0bm": {
     "defaultMessage": "video",
     "description": "Title of the photo view in image picker wizzard"
+  },
+  "wq7Uyv": {
+    "defaultMessage": "Add",
+    "description": "ColorPicker component - Bottom sheet label button validate action"
   },
   "x/HwUu": {
     "defaultMessage": "Take a picture",
