feat: Onboarding cover with template (#201)
* feat: add role to user

* Initial commit

feat: template cover editor

fix: typo

Feat: Move category to template add mediastyle

feat: ra features toolbar

fix: canvas first rander

fix: remove filter query was causing missing element

fix: add filter and fix colorpalette + text

Update .gitignore

* switch env

* fix: busines profile was never ready

* fear(backoffice): remove unecessary database

* feat(backoffice): add image cover controle dimension, add merged/segmented into data for simplication

* chore(vscode): add restore terminal config

* feat: add cover template

* fix: current test

* fix: degedating template for web. a CoverScreenViewrenderer has to be implemented instead of using CoverScreenEditCoverRender due to reac-native-vhiew-shot

* chore: renaming

* feat: add tests and accessibiltiy

* fix: linting

* Prevent usage of web only image helpers on mobile

* feat: clean script

* some rework

* chore: build

* chore: tests

* chore(test): rename query

* fix(test): CoverEditionScreen colorpalette

* fix(test): CoverEdition colorpalette

* fix(test): could save avec title edition

* remove temporary file

* Test linter

* chore: cannot fix type relay...

fix

fix: web

fix  web

* Fix: create a real media in backoffice for tempalte cover

* feat(backoffice) : add a selectlist for country

* Fix source media Id

* Remove console.log

* fix: review

* remove useless return

* fix: coverTempalte on node and test

* remove unecessary id

* fix test

* last fix

---------

Co-authored-by: François de Campredon <francois.de.campredon@gmail.com>

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -1,4 +1,8 @@
 {
+  "+eDqFA": {
+    "defaultMessage": "Cancel",
+    "description": "OnBoarding Cover Component - Link Cancel"
+  },
   "+miIiv": {
     "defaultMessage": "Invalid credentials",
     "description": "SigninScreen - Invalid Credentials"
@@ -46,6 +50,10 @@
   "4RJ0I8": {
     "defaultMessage": "Password",
     "description": "Password input placeholder"
+  },
+  "4lSCO+": {
+    "defaultMessage": "Create your cover from scratch",
+    "description": "TemplateSelector - AccessibilityLabel Button Create your cover from scratch"
   },
   "5/HOhV": {
     "defaultMessage": "Profiles",
@@ -119,6 +127,10 @@
     "defaultMessage": "Tap me to show the QR Code fullscreen",
     "description": "CoverRenderer - Accessibility Qr code button"
   },
+  "7j6ah2": {
+    "defaultMessage": "Select this cover template template for your profile",
+    "description": "TemplateSelectorTemplateItem accessibilityHint template item"
+  },
   "87390w": {
     "defaultMessage": "Let's get started with Azzapp!",
     "description": "Signup Screen - Let's get started with Azzapp! subtitle"
@@ -178,6 +190,10 @@
   "C1R1bc": {
     "defaultMessage": "Fade",
     "description": "Fade photo filter name"
+  },
+  "C3M81B": {
+    "defaultMessage": "Cancel and go back",
+    "description": "TemplateSelector - AccessibilityLabel Link Cancel"
   },
   "CCNK+L": {
     "defaultMessage": "Confirm password",
@@ -623,6 +639,10 @@
     "defaultMessage": "Bottom to top",
     "description": "Label of the bottom to top orientation in cover edition"
   },
+  "kAtJlh": {
+    "defaultMessage": "Create your cover from scratch",
+    "description": "TemplateSelector - Create your cover from scratch Button"
+  },
   "kjYrL+": {
     "defaultMessage": "Color #1",
     "description": "Label of the background pattern color tab in cover edition"
@@ -662,6 +682,10 @@
   "m/3KOp": {
     "defaultMessage": "Bottom center",
     "description": "Label of the bottom center position in cover edition"
+  },
+  "m/dw+k": {
+    "defaultMessage": "Horizontal list of Cover Templates",
+    "description": "TemplateSelector - AccessibilityLabel List Templates"
   },
   "m3tMdT": {
     "defaultMessage": "Tap to sign up",
@@ -710,6 +734,10 @@
   "nMtsXg": {
     "defaultMessage": "Shadow",
     "description": "Shadow image edition parameters name"
+  },
+  "nQzYNz": {
+    "defaultMessage": "Choose a visual for your cover",
+    "description": "OnBoarding Cover Component - Title"
   },
   "noNWRA": {
     "defaultMessage": "Cut Video",
@@ -839,6 +867,10 @@
     "defaultMessage": "Chrome",
     "description": "Chrome photo filter name"
   },
+  "uWN1s2": {
+    "defaultMessage": "Tap to cancel the creation fo your cover",
+    "description": "TemplateSelector - AccessibilityHint Link Cancel"
+  },
   "uYooK1": {
     "defaultMessage": "Enter your company name",
     "description": "OnBoarding Name Company Screen - Enter your company name placeholder"
@@ -931,6 +963,10 @@
     "defaultMessage": "Tap to search for {word}",
     "description": "Recent Search - Accessibiltity Label remove element from history"
   },
+  "z0uhsM": {
+    "defaultMessage": "You’ll be able to modify it later",
+    "description": "OnBoarding Cover Component - Subtitle"
+  },
   "z7TgL0": {
     "defaultMessage": "Tonal",
     "description": "Tonal photo filter name"
@@ -946,5 +982,9 @@
   "zSfUYY": {
     "defaultMessage": "Company name",
     "description": "OnBoarding Name Company Screen - Company name label textinput"
+  },
+  "zXfzb7": {
+    "defaultMessage": "or",
+    "description": "OnBoarding Cover Component - Or text"
   }
 }
