fix [v0.0.2] Crash on signup screen : email/phone bouton selector #221 (#224)
* fix [v0.0.2] Crash on signup screen : email/phone bouton selector #221

* fix [v0.0.2] Crash on signup screen : email/phone bouton selector #221

* Revert "Merge branch 'issue_002_version' of https://github.com/AzzappApp/azzapp into issue_002_version"

This reverts commit 91efb9b99ebf0b065ada7e5b33b9c3fe30dd3745, reversing
changes made to c1f74113f835ce4e0fb8f020f118ae8a1aba1fbb.

* use a clear encryptedStorage

* fix: test and title label on coveredition

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -335,10 +335,6 @@
     "defaultMessage": "Sepia",
     "description": "Sepia photo filter name"
   },
-  "PL6vuK": {
-    "defaultMessage": "Title",
-    "description": "Label of the title tab in cover edition"
-  },
   "PVzsRd": {
     "defaultMessage": "Foreground",
     "description": "Label of Foreground tab in cover edition"
@@ -894,6 +890,10 @@
   "w96WJ0": {
     "defaultMessage": "Password doesn't match",
     "description": "ChangePasswordScreen Screen - error passwords doesn't match"
+  },
+  "wZwtml": {
+    "defaultMessage": "Name",
+    "description": "Label of the name tab in cover edition"
   },
   "wfjPDR": {
     "defaultMessage": "Photos gallery",
