Cover edition bugfix (#268)
* wip

wip

createStyle: add option to force the appearance color

Signin: dark mode and fix discrepency with figma

Signup dark mode and few fix from figma

ForgotPassword

making more guide and dark mode

wip

* wip

sqash

* improving onboarinfg

* resize icon button

wip

wip

wip

* test: fix

* update picker  color

* Switch implementation and test

* Checkbox: limit leak. Add mixed mode and dark mode

* RadioButton

* TextInputLabel

* Add test textInputLabel

* AdjustementButton

* simple header test

fix test signup

quik lint fix

remove unused file

remove await

* implement change in #197

* fix: add a default color palette for user (from spec)

* fix most of missing icon

* fix: review

* fix: review part2

* fix review part3

* fix bottom margin/ safe area

* change font name system

* fix review 4

* allow keyboard dismiss

* small icon alignment

* lint

* Remove Template selector screen

change image link

still missing one test

fix test

test: CoverEditionScreen

fix: relay provider cannot be used in refetchableFragment

restore

* Some label changes

* remove Dimension

* use demo asset

* some param to darken the image

* fix demo asset test

* feat: improve user feeling in coverEdition

* feat(CoverEdition): Improve ui template with shadow being clip

* fix(CoverEdition) Bug-20230410-1-CoverEdition.TEMPLATES-cropped profile image displayed incorrectly in templates #259

* fix(CoverEdition): Bug-20230405-5 - selecting template reverts all profile image adjustments #255

* fix(CoverEdition): Bug-20230405-4 - 'acitivity' not displayed in 'Subtitle' field #254

* fix position of cropping panel without unmounting over panel

* fix(CoverEdition) respect orientation for cover template

* fix: label image picker as spec required

* Fix bottomSheet with inithal height pass as param

* Fix after rebase

*

--- a/packages/i18n/src/app/en.json
+++ b/packages/i18n/src/app/en.json
@@ -663,6 +663,10 @@
     "defaultMessage": "Top right",
     "description": "Label of the top right position in cover edition"
   },
+  "jyOPzp": {
+    "defaultMessage": "Save",
+    "description": "Save button label in image picker wizzard"
+  },
   "k2pUu2": {
     "defaultMessage": "Bottom to top",
     "description": "Label of the bottom to top orientation in cover edition"
@@ -906,10 +910,6 @@
   "vDm98w": {
     "defaultMessage": "Sharpness",
     "description": "Sharpness image edition parameters name"
-  },
-  "w3ybid": {
-    "defaultMessage": "Finish",
-    "description": "Finish button label in image picker wizzard"
   },
   "w96WJ0": {
     "defaultMessage": "Password doesn't match",
